--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/public/images/shia  WATERMARK.png" />
+    <link rel="icon" type="image/svg+xml" href="/public/images/SHAMSUL HUDA LOGO PNG.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="/src/style.css" rel="stylesheet">
     <title>Shamsul Huda </title>
